test link contact

--- a/frontend/src/pages/Contact/contact.module.scss
+++ b/frontend/src/pages/Contact/contact.module.scss
@@ -82,7 +82,9 @@
 
     .submitButton {
         background-color: #FF8C00;
-        color: white;
+        color: black;
+        font-size: 20px;
+        font-weight: 400;
         border: none;
         padding: 10px;
         border-radius: 5px;
