--- a/frontend/src/components/Header/header.module.scss
+++ b/frontend/src/components/Header/header.module.scss
@@ -99,8 +99,8 @@
         gap: 10px;
         display: flex;
         flex-direction: column;
-        width: auto;
-        margin: 0 10px 0 0;
+        width: 75px;
+        margin: 0;
         background-color: rgba(0, 0, 0, 0.8);
         transition: max-height 1s ease-in-out;
         max-height: 0;
