--- a/frontend/src/components/Card/card.module.scss
+++ b/frontend/src/components/Card/card.module.scss
@@ -1,3 +1,5 @@
+@import '../../utils/style/variables';
+
 .cardWrapper {
   display: flex;
   flex-direction: column;
@@ -8,7 +10,7 @@
   min-height: 500px;
   min-width: 250px;
   max-width: 750px;
-  border: solid 1px #ff8c00;
+  border: solid 1px $primary-color;
   border-radius: 20px;
 
   @media (max-width: 850px) {
@@ -141,7 +143,7 @@
   right: -10px;
   background: none;
   border: none;
-  color: #ff8c00;
+  color: $primary-color;
   font-size: 24px;
 }
 
@@ -152,7 +154,7 @@
   transform: translateY(-50%);
   background: transparent;
   border: none;
-  color: #ff8c00;
+  color: $primary-color;
   font-size: 2rem;
 }
 
