--- a/frontend/src/components/Footer/footer.module.scss
+++ b/frontend/src/components/Footer/footer.module.scss
@@ -1,3 +1,5 @@
+@import '../../utils/style/variables';
+
 .footerBackground {
     display: flex;
     justify-content: center;
@@ -38,7 +40,7 @@ p {
         transition: color 0.3s;
 
         &:hover {
-            color: #FF8C00 ;
+            color: $primary-color ;
         }
     }
 }
