--- a/frontend/src/pages/Home/home.module.scss
+++ b/frontend/src/pages/Home/home.module.scss
@@ -1,3 +1,5 @@
+@import '../../utils/style/variables';
+
 .homeWrapper {
   position: relative;
   overflow: hidden;
@@ -173,7 +175,7 @@
   flex-direction: column;
 
   h2 {
-    color: #FF8C00;
+    color: $primary-color;
   }
 
   p {
@@ -185,7 +187,7 @@
     height: 1px;
     width: 40%;
 
-    background-color: #FF8C00;
+    background-color: $primary-color;
     margin: 10px 10px 10px 0px;
   }
 }
@@ -218,7 +220,7 @@
 .title {
   font-size: 2em;
   margin-bottom: 30px;
-  color: #FF8C00;
+  color: $primary-color;
   border: none;
 }
 
