--- a/frontend/src/utils/style/global.scss
+++ b/frontend/src/utils/style/global.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 * {
     font-family: 'Poppins', sans-serif;
     cursor: crosshair;
@@ -13,7 +15,7 @@
   h1 {
     font-size: 2rem;
     font-weight: 300;
-    color: #FF8C00;
+    color: $primary-color;
     text-align: center;
 
     @media (max-width: 650px) {
@@ -26,10 +28,10 @@
     width: fit-content;
     z-index: 2;
     font-size: 2rem;
-    color: #FF8C00;
+    color: $primary-color;
     text-align: center;
     font-weight: 300;
-    border: #FF8C00 solid 1px;
+    border: $primary-color solid 1px;
     border-radius: 10px;
     display: inline-block;
     padding: 0 10px;
@@ -41,7 +43,7 @@
   }
 
   h3 {
-    color: #FF8C00;
+    color: $primary-color;
     font-weight: 300;
     font-size: 1.5rem;
     margin-left: 0.5rem;
